# caduceus

./: .gitignore  .prettierrc  LICENSE  README.md  docker-compose.yml
.github/workflows/: api-contract.yml  frontend.yml  go-backend.yml  rust-coverage.yml
app/: .env.example  components.json  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.config.mts  vitest.config.ts
app/i18n/: en-US.json  ja-JP.json  zh-CN.json
app/messages/: en-US.json  ja-JP.json  zh-CN.json
app/scripts/: api-schemas.hbs  check-api-drift.ts  codegen-api.ts
app/src/: middleware.ts  proxy.ts
app/src/actions/: auth.ts
app/src/app/: layout.tsx  not-found.tsx  page.tsx
app/src/app/(dashboard)/: layout.tsx  page.tsx
app/src/app/(dashboard)/@header/: default.tsx  page.tsx
app/src/app/(home)/: layout.tsx  page.tsx
app/src/app/login/: page.tsx
app/src/app/register/: page.tsx
app/src/components/: Icon.tsx  Sidebar.tsx
app/src/components/badges/: ServerBadge.tsx
app/src/components/buttons/: CreateProjectButton.tsx  CreateTeamButton.tsx  DownloadProjectButton.tsx  DuplicateProjectButton.tsx  ThemeButton.tsx  UpdateProjectButton.tsx
app/src/components/forms/: Input.tsx  Select.tsx  ZodForm.tsx
app/src/components/roots/: NavBar.tsx  Providers.tsx
app/src/components/tooltips/: UserMeTooltip.tsx
app/src/components/ui/: context-menu.tsx  table.tsx
app/src/hooks/: useAwareness.ts  useCreateProject.ts  useCreateTeam.ts  useLogin.ts  useRegister.ts  useServerStatus.ts  useUserMe.ts  useUserTeams.ts
app/src/hooks/api/: health.ts  login.ts  project.test.ts  project.ts  register.ts  team.ts
app/src/hooks/api/user/: me.ts  (+2 more)
app/src/i18n/: request.ts
app/src/lib/: env.ts  fileTree.ts  message.ts  path.ts  request.ts  response.ts  session.ts  typst.test.ts  typst.ts
app/src/lib/api/: asset.ts  health.test.ts  health.ts  login.test.ts  login.ts  project.test.ts  project.ts  register.test.ts  register.ts  team.test.ts  team.ts
app/src/lib/models/: project.ts  team.ts  user.ts
app/src/lib/types/: project.test.ts  project.ts  team.test.ts  team.ts  user.test.ts  user.ts
app/src/lib/yjs/: presence.ts
app/src/styles/: globals.css  hero.ts
docs/: Architecture - Compilation and Project Model.md  Charts.md  Database Schema.md  File Storage.md  OpenAPI.md  Project Persistence.md  Server.md  openapi.json
scripts/: cherry_pick.ps1  cherry_pick.sh
server/: .env.example  .gitignore  Cargo.toml  README.md  go.mod  go.sum  main.go  main_test.go
server-go/: README.md  go.mod  main.go
server-go/src/config/: config_test.go
server-go/src/handler/: health_test.go  project.go  user_test.go
server-go/src/middleware/: struct_test.go
server-go/src/model/: jwt.go  project_test.go  response.go  team.go  user_test.go
server-go/src/service/: constant.go
server-rust/: .gitignore  Cargo.toml
server-rust/src/: database.rs  error.rs  main.rs  middleware.rs  routes.rs
server-rust/src/handlers/: health.rs  mod.rs  project.rs  team.rs  tests.rs  user.rs
server-rust/src/models/: project.rs  team.rs  user.rs
server-rust/src/services/: project.rs  tests.rs  user.rs
server-rust/tests/: integration_tests.rs
server/config/: config.go  config_test.go  router.go  test.yaml
server/database/: database_test.go  mongo.go
server/handler/: debug_test.go  handler_test.go  health.go  health_test.go  user.go  user_test.go  ws.go  ws_test.go
server/mock/: project.go  user.go
server/model/: model_test.go  user.go
server/router/: router.go  router_test.go
server/service/: user.go  user_test.go
server/src/: database.rs  error.rs  font.rs  lib.rs  main.rs  openapi.rs  routes.rs
server/src/config/: config.go  config_test.go  cors.rs  mod.rs
server/src/crdt/: mod.rs  snapshot.rs
server/src/database/: mod.rs  mongo.go  mongo_test.go
server/src/handler/: asset.rs  health.go  health.rs  health_test.go  mod.rs  project.go  project.rs  team.rs  user.go  user.rs  user_test.go  ws.go  ws.rs  ws_test.go
server/src/handlers/: health.rs  project.rs  team.rs  tests.rs  user.rs
server/src/middleware/: jwt.go  jwt.rs  mod.rs  struct.go
server/src/mock/: user.go  user_test.go
server/src/model/: jwt.go  jwt_test.go  project.go  response.go  team.go  team_test.go  user.go  user.rs  user_test.go
server/src/models/: mod.rs  path.rs  project.rs  response.rs  team.rs  tree.rs  user.rs  ws.rs
server/src/repo/: asset.rs  project.rs  team.rs  user.rs
server/src/router/: mod.rs  router.go  router_test.go
server/src/service/: project.go  user.go  user_test.go
server/src/services/: asset.rs  mod.rs  project.rs  team.rs  user.rs
server/src/storage/: mod.rs
server/tests/: api.rs  basic_integration.rs  health_integration.rs
server/tests/common/: mod.rs
(+46 files in other folders)
